# IoT-Solar-Charging-System

./: .gitignore  COMPUTATION_METHODOLOGY.md  README.md  project_structure.md  requirements_all.txt  setup_environment.ps1  setup_environment.sh
.github/workflows/: publish-packages.yml
cloud/backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  solar_charger.db
cloud/backend/database/: __init__.py  db.py
cloud/backend/models/: __init__.py  sensor_data.py
cloud/backend/routes/: __init__.py  data_routes.py
cloud/frontend/: .npmrc  README.md  package-lock.json  package.json
cloud/frontend/public/: index.html
cloud/frontend/src/: App.jsx  index.jsx
cloud/frontend/src/components/: CurrentChart.jsx  EnergyMeter.jsx  PowerGauge.jsx  StatusPanel.jsx  VoltageChart.jsx
cloud/frontend/src/utils/: api.js
data/test_results/: README.md
documentation/: COMPUTATION_METHODOLOGY.md  Computations_Complete_Guide.md  DESIGN_CONSIDERATIONS.md  LITERATURE_REVIEW.md  PROJECT_OVERVIEW.md  SYSTEM_ARCHITECTURE.md
firmware/esp8266/: README.md  dependencies.txt
firmware/esp8266/iot_gateway/: cloud_uploader.h  config.h  iot_gateway.ino  wifi_manager.h
firmware/stm32/: README.md  dependencies.txt
firmware/stm32/Core/Inc/: communication.h  main.h  power_calc.h  pwm_control.h  sensor_driver.h  supercap_monitor.h
firmware/stm32/Core/Src/: communication.c  main.c  power_calc.c  pwm_control.c  sensor_driver.c  supercap_monitor.c
hardware/schematics/: sensor_circuits.md  stm32_connections.md  system_schematic.md
ml_model/: README.md  __init__.py  charging_dataset.csv  charging_time_prediction.ipynb  dataset_generation.py  pyproject.toml  requirements.txt
presentations/: Mid_Sem_Viva_Presentation.pptx  README.md
simulation/data/: clear_sky_morning.csv  cloudy_day.csv  full_charge_cycle.csv  partial_shade.csv  simulated_charging_data.csv
simulation/demo/: README.md  charging_model.py  scenario_generator.py  stm32_simulator.py
