# =============================================================================
# Project Title:
#   IOT-ENABLED SOLAR-ASSISTED HIGH-EFFICIENCY BATTERY CHARGING USING
#   SUPERCAPACITOR ENERGY BUFFERING
#
# Author: Ajeesh Kumar R | BITS ID: 2024MT12104
# Programme: M.Tech in Software Systems - Specialization in IoT
# Institution: BITS Pilani - Work Integrated Learning Program (WILP) Division
#
# Academic Purpose Notice:
#   This file is developed solely for academic learning, research, experimentation,
#   and project evaluation purposes under the M.Tech in Software Systems -
#   Specialization in IoT programme at BITS Pilani WILP.
#
# Ownership: All project work is the intellectual work of the above-mentioned
#   author unless otherwise referenced.
# Usage Restriction: Unauthorized copying, redistribution, or commercial usage
#   without prior permission is discouraged.
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-charging-ml"
version = "1.0.0"
description = "ML-based charging time prediction for IoT Solar Charging System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ajeesh Kumar R", email = "2024mt12104@wilp.bits-pilani.ac.in"}
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "scipy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/2024mt12104/IoT-Solar-Charging-System"
Repository = "https://github.com/2024mt12104/IoT-Solar-Charging-System"
